# resulty

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  api_client.py  data_validation.py  database_operations.py  file_operations.py
resulty/: __init__.py
tests/: test_resulty.py
